@startuml

title __CONFÝGURATÝON's Class Diagram__\n

  namespace com.team1.animalproject {
    namespace configuration {
      class com.team1.animalproject.configuration.ConfigureJSF {
          + facesServletRegistration()
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace configuration {
      class com.team1.animalproject.configuration.ConfigureJSF.JsfServletRegistrationBean {
          + JsfServletRegistrationBean()
          + onStartup()
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace configuration {
      class com.team1.animalproject.configuration.ServerCustomization {
          + customize()
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace configuration {
      class com.team1.animalproject.configuration.ServletInitializer {
          # configure()
      }
    }
  }
  

  namespace com.team1.animalproject {
    namespace configuration {
      class com.team1.animalproject.configuration.WebMvcConfiguration {
          + addInterceptors()
          + getServerProperties()
          + getValidator()
          + localeChangeInterceptor()
          + localeResolver()
          + messageSource()
      }
    }
  }
  

  com.team1.animalproject.configuration.ConfigureJSF +-down- com.team1.animalproject.configuration.ConfigureJSF.JsfServletRegistrationBean
  com.team1.animalproject.configuration.ConfigureJSF.JsfServletRegistrationBean -up-|> org.springframework.boot.web.servlet.ServletRegistrationBean
  com.team1.animalproject.configuration.ServerCustomization -up-|> org.springframework.boot.autoconfigure.web.ServerProperties
  com.team1.animalproject.configuration.ServletInitializer -up-|> org.springframework.boot.web.support.SpringBootServletInitializer
  com.team1.animalproject.configuration.WebMvcConfiguration -up-|> org.springframework.web.servlet.config.annotation.WebMvcConfigurerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
